--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "fake-event-contract",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/contracts": "^5.3.0",
     "hardhat": "^2.24.3",
-    "@openzeppelin/contracts": "^5.3.0"
+    "hardhat-abi-exporter": "^2.11.0"
   },
   "scripts": {
     "test": "npx hardhat coverage",
     "compile": "npx hardhat compile",
-    "local:start": "npx hardhat node",
-    "local:deploy": "npx hardhat run scripts/deploy.ts --network localhost"
+    "start:local": "npx hardhat node",
+    "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost"
   }
 }
