--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "npx hardhat coverage",
     "compile": "npx hardhat compile",
     "start:local": "npx hardhat node",
-    "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost"
+    "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
+    "export:abi": "npx hardhat export-abi"
   }
 }
